solve the detached head problem by re-checkout master, now go ahead to test the automated build for ConsoleApplication1

--- a/ConsoleApplication1/ConsoleApplication1/buildagent.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/buildagent.csproj
@@ -11,7 +11,7 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <ProjectGuid>{69E9C9C7-9455-4FC6-AB8F-ADBDCE4820CF}</ProjectGuid>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
